--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -28,6 +28,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.4",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "nestjs-grpc-exceptions": "^0.2.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "ts-proto": "^2.2.2"
