setup typeorm in orders microservice

--- a/orders-ms/.env.template
+++ b/orders-ms/.env.template
@@ -1,1 +1,9 @@
-DATABASE_URL="postgresql://orders:orders@localhost:5432/mydb=orders?schema=public"
+PORT=6000
+
+DB_HOST=localhost
+DB_PORT=5433
+DB_USER=orders
+DB_PASSWORD=orders
+DB_NAME=orders
+
+PRODUCTS_SERVICE_URL=localhost:5500
